--- a/app/src/main/res/layout/activity_add_job.xml
+++ b/app/src/main/res/layout/activity_add_job.xml
@@ -9,11 +9,13 @@
 
     <EditText
         android:id="@+id/et_f_name_reg"
-        android:layout_width="297dp"
-        android:layout_height="67dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/edit_view"
         android:ems="10"
@@ -22,7 +24,9 @@
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.19999999" />
+
 </android.support.constraint.ConstraintLayout>
